# min-c

./: .gitignore  CMakeLists.txt  run.sh  run_tests.sh
plugins/: CommandRunning.h  FileUtils.h  GenericFilter.h  RemoveCharPass.cpp  RemoveFilePass.cpp  RemoveLinesPass.cpp  RunClangDeltaPass.cpp  RunTopformflatPass.cpp  runTopformflatPass.cpp
plugins/test/: CommandRunningTest.cpp  GenericFilterTest.cpp
src/: ChildProcessDelegate.cpp  ChildProcessDelegate.h  ConsoleStatus.cpp  ConsoleStatus.h  DirectoryCopier.cpp  DirectoryCopier.h  MinCInvocation.cpp  MinCInvocation.h  Pass.cpp  Pass.h  PassManager.cpp  PassManager.h  PassRunner.cpp  PassRunner.h  ShellCommand.cpp  ShellCommand.h  TestDirectory.cpp  TestDirectory.h  Utils.cpp  Utils.h  main.cpp
src/test/: ShellCommandTest.cpp
test/: RemoveChar.sh  RemoveLines.sh  test.py
test/RemoveChar/: file
test/RemoveCharExpected/: file
